core/k8s-gateway/4.0.19/CHANGELOG.md
# Changelog<br>


<a name="k8s-gateway-4.0.19"></a>
### k8s-gateway-4.0.19 (2021-12-05)

#### Chore

* bump apps to generate security page
* move all container references to TCCR ([#1448](https://github.com/truecharts/apps/issues/1448))
* update non-major deps helm releases ([#1471](https://github.com/truecharts/apps/issues/1471))
* update non-major deps helm releases ([#1468](https://github.com/truecharts/apps/issues/1468))
* update non-major deps helm releases ([#1453](https://github.com/truecharts/apps/issues/1453))
* update non-major ([#1449](https://github.com/truecharts/apps/issues/1449))
* update non-major deps helm releases ([#1432](https://github.com/truecharts/apps/issues/1432))

#### Fix

* fix typo in theme selection ([#1428](https://github.com/truecharts/apps/issues/1428))



<a name="k8s-gateway-4.0.18"></a>
### [k8s-gateway-4.0.18](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.17...k8s-gateway-4.0.18) (2021-12-05)

#### Chore

* update non-major deps helm releases ([#1468](https://github.com/truecharts/apps/issues/1468))



<a name="k8s-gateway-4.0.17"></a>
### [k8s-gateway-4.0.17](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.16...k8s-gateway-4.0.17) (2021-12-04)

#### Chore

* bump apps to generate security page



<a name="k8s-gateway-4.0.16"></a>
### [k8s-gateway-4.0.16](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.15...k8s-gateway-4.0.16) (2021-12-04)

#### Chore

* update non-major deps helm releases ([#1453](https://github.com/truecharts/apps/issues/1453))



<a name="k8s-gateway-4.0.15"></a>
### [k8s-gateway-4.0.15](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.14...k8s-gateway-4.0.15) (2021-12-03)

#### Chore

* move all container references to TCCR ([#1448](https://github.com/truecharts/apps/issues/1448))
* update non-major ([#1449](https://github.com/truecharts/apps/issues/1449))



<a name="k8s-gateway-4.0.14"></a>
### [k8s-gateway-4.0.14](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.13...k8s-gateway-4.0.14) (2021-11-30)

#### Chore

* update non-major deps helm releases ([#1432](https://github.com/truecharts/apps/issues/1432))



<a name="k8s-gateway-4.0.13"></a>
### [k8s-gateway-4.0.13](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.12...k8s-gateway-4.0.13) (2021-11-23)

#### Chore

* update non-major deps helm releases ([#1386](https://github.com/truecharts/apps/issues/1386))



<a name="k8s-gateway-4.0.12"></a>
### [k8s-gateway-4.0.12](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.11...k8s-gateway-4.0.12) (2021-11-22)

#### Chore

* update non-major deps helm releases ([#1383](https://github.com/truecharts/apps/issues/1383))

#### Fix

* Default enable all services ([#1361](https://github.com/truecharts/apps/issues/1361))



<a name="k8s-gateway-4.0.11"></a>
### [k8s-gateway-4.0.11](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.10...k8s-gateway-4.0.11) (2021-11-16)

#### Chore

* update non-major deps helm releases ([#1345](https://github.com/truecharts/apps/issues/1345))



