core/k8s-gateway/4.0.25/CHANGELOG.md
# Changelog<br>


<a name="k8s-gateway-4.0.25"></a>
### [k8s-gateway-4.0.25](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.24...k8s-gateway-4.0.25) (2021-12-19)

#### Chore

* Last patch bump before RC2 branch-off
* remove `editable: true` as this is the default ([#1576](https://github.com/truecharts/apps/issues/1576))



<a name="k8s-gateway-4.0.24"></a>
### [k8s-gateway-4.0.24](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.23...k8s-gateway-4.0.24) (2021-12-19)

#### Chore

* App-Icon Organization ([#1539](https://github.com/truecharts/apps/issues/1539))
* update helm general non-major helm releases ([#1571](https://github.com/truecharts/apps/issues/1571))



<a name="k8s-gateway-4.0.23"></a>
### [k8s-gateway-4.0.23](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.22...k8s-gateway-4.0.23) (2021-12-14)

#### Chore

* update helm general non-major helm releases ([#1535](https://github.com/truecharts/apps/issues/1535))



<a name="k8s-gateway-4.0.22"></a>
### [k8s-gateway-4.0.22](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.21...k8s-gateway-4.0.22) (2021-12-13)

#### Chore

* move incubator apps to stable and bump everything



<a name="k8s-gateway-4.0.21"></a>
### [k8s-gateway-4.0.21](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.20...k8s-gateway-4.0.21) (2021-12-11)

#### Chore

* update general helm non-major helm releases ([#1509](https://github.com/truecharts/apps/issues/1509))



<a name="k8s-gateway-4.0.20"></a>
### [k8s-gateway-4.0.20](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.19...k8s-gateway-4.0.20) (2021-12-07)

#### Chore

* update non-major deps helm releases ([#1481](https://github.com/truecharts/apps/issues/1481))



<a name="k8s-gateway-4.0.19"></a>
### k8s-gateway-4.0.19 (2021-12-05)

#### Chore

* bump apps to generate security page
* move all container references to TCCR ([#1448](https://github.com/truecharts/apps/issues/1448))
* update non-major deps helm releases ([#1471](https://github.com/truecharts/apps/issues/1471))
* update non-major deps helm releases ([#1468](https://github.com/truecharts/apps/issues/1468))
* update non-major deps helm releases ([#1453](https://github.com/truecharts/apps/issues/1453))
* update non-major ([#1449](https://github.com/truecharts/apps/issues/1449))
* update non-major deps helm releases ([#1432](https://github.com/truecharts/apps/issues/1432))

#### Fix

* fix typo in theme selection ([#1428](https://github.com/truecharts/apps/issues/1428))



<a name="k8s-gateway-4.0.18"></a>
### [k8s-gateway-4.0.18](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.17...k8s-gateway-4.0.18) (2021-12-05)

#### Chore

* update non-major deps helm releases ([#1468](https://github.com/truecharts/apps/issues/1468))



<a name="k8s-gateway-4.0.17"></a>
### [k8s-gateway-4.0.17](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.16...k8s-gateway-4.0.17) (2021-12-04)

#### Chore

* bump apps to generate security page



<a name="k8s-gateway-4.0.16"></a>
### [k8s-gateway-4.0.16](https://github.com/truecharts/apps/compare/k8s-gateway-4.0.15...k8s-gateway-4.0.16) (2021-12-04)

